@@ -2,6 +2,7 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, PHP 5 Release Candidate 3
 - You may now use count() on COM arrays. (Wez)
+- Fixed bug #28300 (Userspace stream/filter names forced to lowercase). (Sara)
 - Fixed bug #28287 (stream_*_register() not calling __autoload()). (Sara)
 - Fixed bug #28161 (COM: Array style properties could not be accessed). (Wez)
 - Fixed bug #28125 (ArrayObject leaks when accessing elements). (Marcus)
